--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+#progress-bar {
+  --scrollAmount: 0%;
 
+  background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%);
+  width: var(--scrollAmount);
+  height: 4px;
+  top: 0;
+  position: fixed;
+}
 
 *{
   margin: auto;
@@ -207,7 +215,7 @@ margin-bottom: 40px;
   align-items: center;
   width: 300px;
   height: 300px;
-  position: absolute;
+  position: relative;
   bottom: 100px;
   right: 30px;
   background-color: white;
