--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-#progress-bar {
-  --scrollAmount: 0%;
+/* #progress-bar {
+//  --scrollAmount: 0%;
 
-  background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%);
-  width: var(--scrollAmount);
-  height: 4px;
-  top: 0;
-  position: fixed;
-}
-
+//  background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%);
+//  width: var(--scrollAmount);
+//  height: 4px;
+//  top: 0;
+//  position: fixed;
+//}
+*/
 *{
   margin: auto;
 }
@@ -212,18 +212,15 @@ margin-bottom: 40px;
 
 
 .text-block {
-  align-items: center;
+  align-items: right;
   width: 300px;
   height: 300px;
-  position: relative;
-  bottom: 100px;
-  right: 30px;
+  position: relative ;
+  top: 30px;
+  left: -50px;
   background-color: white;
   color: black;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 50px;
 }
 
 
